manifests/00-prereqs.yaml
# Namespace and Prerequisites
---
apiVersion: v1
kind: Namespace
metadata:
  name: feast-trainer-demo
  labels:
    app.kubernetes.io/name: feast-mlops
